src/main/java/com/example/timelist/Error/GroupStudentDuplicateException.java
package com.example.timelist.Error;

public class GroupStudentDuplicateException extends RuntimeException{
}
